--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>WDD 131-Dynamic Web Fundamentals-Emmanuel O.Irebami</title>
     <meta name="description" content="WDD 131-Dynamic Web Fundamentals. This Is Emmanuel's Home page">
     <meta name="author" content="Emmanuel Olusola Irebami">
-    <link rel="stylesheet" href="styles/base.css"><link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.    com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?    family=Open+Sans:ital,wght@0,300..800;1,300..800&    display=swap" rel="stylesheet">
     <script defer src="scripts/getdates.js"></script>
@@ -37,6 +38,15 @@
             <p>Nigeria is a federal republic located in West Africa. It is bordered by Niger to the north, Chad to the northeast, Cameroon to the southeast, and Benin to the west. Nigeria also has a coastline along the Gulf of Guinea in the south. The country is the most populous in Africa, with over 250 ethnic groups and more than 500 languages spoken. The three main ethnic groups are the Hausa-Fulani, Yoruba, and Igbo, which make up approximately 60% of the population. Nigeria is a major economic power in Africa, with a strong focus on industries such as agriculture, oil and natural gas, and manufacturing. The capital city is Abuja, while the largest city is Lagos, a major cultural and economic hub.</p>
         </section>
     </main>
+    <aside>
+        <h2>Web Dev Resourses</h2>
+        <ul class="resourse">
+            <li><a href="https://github.com/">GitHub</a></li>
+            <li><a href="https://www.wappalyzer.com/">Wappalyzer</a></li>
+            <li><a href="https://domainwheel.com/"> Domain Wheel</a></li>
+            <li><a href="https://codepen.io/challenges">CodePen challenges</a></li>
+        </ul>
+    </aside>
     <footer>
         <p>© <span id="currentyear"></span>🌳🌴 Emmanuel Olusola Irebami🌴 Nigeria 🌳</p>
         <p id="lastModified"></p>
